# vxd

./: CMakeLists.txt  CTestConfig.cmake  LICENSE  LICENSE.txt  README.txt  vpe-gitflow.md
basic/: CMakeLists.txt
basic/bbld/: CMakeLists.txt  bbld_subsequence.h
basic/bbld/tests/: CMakeLists.txt  test_include.cxx  test_subsequence.cxx
basic/dbbl/: dbbl_subsequence.h
config/cmake/export/: CMakeLists.txt  VXDCreateProject.cmake
contrib/brld/: CMakeLists.txt
contrib/brld/b3pd/: CMakeLists.txt  README
contrib/brld/b3pd/brent/: CMakeLists.txt  brent.h  fminbr.c  zeroin.c
contrib/brld/b3pd/ray_tri/: CMakeLists.txt  ray_tri.cxx  ray_tri.h  readme.txt
contrib/brld/b3pd/triangulation_kanatani/: CMakeLists.txt  bidiag.cpp  bidiag.h  eigen_okumura.cpp  extensions.cpp  extensions.h  getargs.c  getargs.h  givens.cpp  givens.h  hh_solve.cpp  hh_solve.h  householder.cpp  householder.h  libmatrix.h  macros.h  main.c  matrix.cpp  matrix.h  matutil.cpp  matutil.h  misc.c  misc.h  svd.cpp  svdstep.cpp  svdstep.h  twoview_triangulation.cpp  twoview_triangulation.h  vector.cpp  vector.h
contrib/brld/bbasd/: CMakeLists.txt
contrib/brld/bbasd/bbld/: CMakeLists.txt
contrib/brld/bbasd/bgld/: CMakeLists.txt  bgld_arc.cxx  bgld_arc.h  bgld_arc_base.cxx  bgld_arc_base.h  bgld_area.h  bgld_area.hxx  bgld_barycentric.cxx  bgld_barycentric.h  bgld_dist.cxx  bgld_dist.h  bgld_eno_curve.cxx  bgld_eno_curve.h  bgld_eno_curve_3d.cxx  bgld_eno_curve_3d.h  bgld_eulerspiral_base.cxx  bgld_eulerspiral_base.h  bgld_fuzzy_boolean.h  bgld_linear_curve_3d.cxx  bgld_linear_curve_3d.h  bgld_param_curve.cxx  bgld_param_curve.h  bgld_param_curve_3d.cxx  bgld_param_curve_3d.h  bgld_poly_curve.cxx  bgld_poly_curve.h  bgld_poly_curve_line.cxx  bgld_poly_curve_line.h  bgld_rigid_align.cxx  bgld_rigid_align.h  bgld_triangle.cxx  bgld_triangle.h  dbgl_arc.cxx  dbgl_arc.h  dbgl_arc_base.cxx  dbgl_arc_base.h  dbgl_area.h  dbgl_barycentric.cxx  dbgl_barycentric.h  dbgl_dist.cxx  (+23 more)
contrib/brld/bbasd/bgrld/: CMakeLists.txt  bgrld_edge.h  bgrld_edge.hxx  bgrld_graph.h  bgrld_graph.hxx  bgrld_hg_edge.cxx  bgrld_hg_edge.h  bgrld_hg_graph.cxx  bgrld_hg_graph.h  bgrld_hg_hyperedge.cxx  bgrld_hg_hyperedge.h  bgrld_hg_hypergraph.cxx  bgrld_hg_hypergraph.h  bgrld_hg_vertex.cxx  bgrld_hg_vertex.h  bgrld_vertex.h  bgrld_vertex.hxx  introduction_doxy.txt
contrib/brld/bbasd/bild/: CMakeLists.txt
contrib/brld/bbasd/bnld/: CMakeLists.txt  bnld_angle.h  bnld_cbrt.cxx  bnld_cbrt.h  bnld_fresnel.cxx  bnld_fresnel.h  bnld_gaussian.h  bnld_math.h  bnld_min_max_3.h  bnld_newton_root.cxx  bnld_newton_root.h  bnld_sinc.cxx  bnld_sinc.h  bnld_solve_quadratic_equation.cxx  bnld_solve_quadratic_equation.h  bnld_solve_trigonometric_equation.cxx  bnld_solve_trigonometric_equation.h  dbnl_cbrt.cxx  dbnl_fresnel.h  dbnl_solve_quadratic_equation.cxx  dbnl_solve_quadratic_equation.h  introduction_doxy.txt
contrib/brld/bbasd/bprod/: CMakeLists.txt  bprod_basic_processes.h  bprod_config.h.in  bprod_connector.cxx  bprod_connector.h  bprod_connector_sptr.h  bprod_delay.cxx  bprod_delay.h  bprod_executive.cxx  bprod_executive.h  bprod_fwd.h  bprod_ios_processes.h  bprod_mutex.cxx  bprod_mutex.h  bprod_observer.h  bprod_observer_sptr.h  bprod_parameters.cxx  bprod_parameters.h  bprod_parameters.hxx  bprod_parameters_sptr.h  bprod_process.cxx  bprod_process.h  bprod_process_factory.cxx  bprod_process_factory.h  bprod_process_sptr.h  bprod_storage.h  bprod_storage_sptr.h  bprod_try_option.cxx  bprod_try_option.h  bprod_vsl_processes.h  dbpro_basic_processes.h  dbpro_config.h.in  dbpro_delay.h  dbpro_executive.cxx  dbpro_ios_processes.h  dbpro_observer_sptr.h  dbpro_process.cxx  dbpro_process_sptr.h  dbpro_storage_sptr.h  dbpro_vsl_processes.h  (+1 more)
contrib/brld/bbasd/bsold/: CMakeLists.txt  bsold_algos.cxx  bsold_algos.h  bsold_circ_arc_2d.cxx  bsold_circ_arc_2d.h  bsold_circ_arc_2d_sptr.h  bsold_config.h.in  bsold_file_io.cxx  bsold_file_io.h  bsold_geno_curve_2d.cxx  bsold_geno_curve_2d.h  bsold_geno_curve_2d_sptr.h  bsold_geno_measures.cxx  bsold_geno_measures.h  bsold_gshock.cxx  bsold_gshock.h  bsold_gshock_curve_2d.cxx  bsold_gshock_curve_2d.h  bsold_gshock_curve_2d_sptr.h  bsold_gshock_sptr.h  bsold_interp_curve_2d.cxx  bsold_interp_curve_2d.h  bsold_interp_curve_2d_sptr.h  bsold_interp_curve_3d.cxx  bsold_interp_curve_3d.h  bsold_interp_curve_3d_sptr.h  dbsol_circ_arc_2d.h  dbsol_circ_arc_2d_sptr.h  dbsol_geno_curve_2d.cxx  dbsol_geno_curve_2d_sptr.h  dbsol_geno_measures.h  dbsol_gshock_curve_2d_sptr.h  dbsol_interp_curve_2d.cxx  introduction_doxy.txt
contrib/brld/bbasd/bspid/: CMakeLists.txt  bspid_chamfer.h  bspid_chamfer.hxx  bspid_curve_distance.cxx  bspid_curve_distance.h  bspid_curve_map.cxx  bspid_curve_map.h  (+1 more)
contrib/brld/bmvgd/: CMakeLists.txt
contrib/brld/bpro1/: CMakeLists.txt  bpro1_parameters.cxx  bpro1_parameters.h  bpro1_parameters.hxx  bpro1_process.h  bpro1_storage.cxx  bpro1_storage.h  bpro1_storage_sptr.h  introduction_doxy.txt
contrib/brld/bpro1d/: CMakeLists.txt  bpro1_parameters_sptr.h  bpro1_process.cxx  bpro1_process.h  bpro1_storage.h  bpro1d_parameters.cxx  bpro1d_parameters.h  bpro1d_parameters.hxx  bpro1d_parameters_sptr.h  bpro1d_process.cxx  bpro1d_process.h  bpro1d_process_sptr.h  bpro1d_storage.cxx  bpro1d_storage.h  bpro1d_storage_sptr.h  introduction_doxy.txt
contrib/brld/brecd/: CMakeLists.txt
contrib/brld/breye1d/: CMakeLists.txt
contrib/brld/bsegd/: CMakeLists.txt
contrib/brld/vidpro1/: CMakeLists.txt  introduction_doxy.txt  vidpro1_process_manager.cxx  vidpro1_process_manager.h  vidpro1_process_manager_sptr.h  vidpro1_repository.cxx  vidpro1_repository.h
contrib/brld/vidpro1d/: CMakeLists.txt  introduction_doxy.txt  vidpro1_process_manager.cxx  vidpro1_repository.h  vidpro1_repository_sptr.h
old/contrib/gel/: CMakeLists.txt
old/contrib/tbl/: CMakeLists.txt
old/core/: CMakeLists.txt
old/core/vidl1/: CMakeLists.txt  vidl1_avicodec.h  vidl1_avifile_avicodec.cxx  vidl1_avifile_avicodec.h  vidl1_ffmpeg_codec.cxx  vidl1_ffmpeg_codec.h  vidl1_mpegcodec_helper.h  vidl1_vob_frame_index.cxx
(+1337 files in other folders)
