# b3pd/CMakeLists.txt
# Brown 3rd Party Libraries (VXD version)

####################################################################
#                                                                  #
# This is a place to store third party libraries that are required #
# by other code in this repository.  Please view the README file.  #
#                                                                  #
####################################################################

add_subdirectory( ray_tri )
