# brcv/mvg/CMakeLists.txt
# Brown Multi-View Geometry Libraries (vxd development version).

# Brown Multiview Differential Geometry Library (vxd development version)
add_subdirectory(bdifd)

# Brown Multiview Curve Stereo Library 
# Basis for the 3D curve sketch system (vxd development version)
add_subdirectory(bmcsd)
